--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Pasta Recipes</title>
     </head>
 
 <body> 
-    <h1>Odin Recipes</h1>
+    <h1>Pasta Recipes</h1>
+    <a href="recipes/farfalle.html">Asparagus, Chilli & Feta Farfalle</a>
 </body>  
 
 </html>
