Add more recipe pages and images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 
 <body> 
     <h1>Pasta Recipes</h1>
-    <a href="recipes/farfalle.html">Asparagus, Chilli & Feta Farfalle</a>
+    <img src="./img/group.jpg" alt="A photograph of various types of uncooked pasta." height="784" width="523">
+    <ul>
+        <li><a href="recipes/farfalle.html">Asparagus, Chilli & Feta Farfalle</a></li>
+        <li><a href="recipes/macaroni.html">Mac & Cheese</a></li>
+        <li><a href="recipes/fettuccine.html">Fettuccine Alfredo</a></li>
+        <li><a href="recipes/ravioli.html">Pesto Ravioli</a></li>
+    </ul>
 </body>  
 
 </html>
