--- a/recipes/farfalle.html
+++ b/recipes/farfalle.html
@@ -8,22 +8,29 @@
     <body>
         <h1>Asparagus, Chilli & Feta Farfalle</h1>
 
-        <img src="../img/farfalle.jpg" alt="A photograph of uncooked farfalle pasta arranged on top of a textured cloth." height="25%" width="25%">
+        <img src="../img/farfalle.jpg" alt="A photograph of uncooked farfalle pasta arranged on top of a textured cloth." height="783" width="588">
         
         <h3>Ingredients</h5>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>200g farfalle</li>
+            <li>2 tbsp olive oil, plus extra to serve</li>
+            <li>2 garlic cloves, finely chopped</li>
+            <li>1 red chilli, finely chopped</li>
+            <li>250g asparagus, woody ends trimmed, cut into small pieces</li>
+            <li>1 lemon, zested and juiced</li>
+            <li>handful basil leaves</li>
+            <li>30g pine nuts, toasted</li>
+            <li>50g feta, crumbled</li>
         </ul>
 
         <h3>Steps</h3>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li> 
+            <li>Bring a large pan of salted water to the boil. Tip in the pasta and cook for 1 min less than pack instructions.</li>
+            <li>Meanwhile, heat the oil in a frying pan over a medium heat. Stir in the garlic, chilli and a pinch of salt, and fry for 1 min until fragrant. Add the asparagus and lemon zest, and cook for 4-5 mins until the asparagus is just tender.
+            </li>
+            <li>Drain the pasta and tip into the asparagus pan. Add the lemon juice, stir through the basil, grind over some black pepper, then divide between bowls. Top with the pine nuts, feta and a drizzle of oil to serve.</li>
         </ol>
+        <a href="../index.html">Home</a>
+
     </body>
 </html>
