Add basic css styling

--- a/recipes/farfalle.html
+++ b/recipes/farfalle.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Farfalle</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Asparagus, Chilli & Feta Farfalle</h1>
+        <h1 class="head">Asparagus, Chilli & Feta Farfalle</h1>
 
         <img src="../img/farfalle.jpg" alt="A photograph of uncooked farfalle pasta arranged on top of a textured cloth." height="783" width="588">
         
-        <h3>Ingredients</h5>
-        <ul>
+        <h3 class="sub">Ingredients</h3>
+        <ul class="list">
             <li>200g farfalle</li>
             <li>2 tbsp olive oil, plus extra to serve</li>
             <li>2 garlic cloves, finely chopped</li>
@@ -23,14 +24,14 @@
             <li>50g feta, crumbled</li>
         </ul>
 
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="sub">Steps</h3>
+        <ol class="list">
             <li>Bring a large pan of salted water to the boil. Tip in the pasta and cook for 1 min less than pack instructions.</li>
             <li>Meanwhile, heat the oil in a frying pan over a medium heat. Stir in the garlic, chilli and a pinch of salt, and fry for 1 min until fragrant. Add the asparagus and lemon zest, and cook for 4-5 mins until the asparagus is just tender.
             </li>
             <li>Drain the pasta and tip into the asparagus pan. Add the lemon juice, stir through the basil, grind over some black pepper, then divide between bowls. Top with the pine nuts, feta and a drizzle of oil to serve.</li>
         </ol>
-        <a href="../index.html">Home</a>
+        <a class="link" href="../index.html">Home</a>
 
     </body>
 </html>
