--- a/recipes/fettuccine.html
+++ b/recipes/fettuccine.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Fettuccine</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Fettuccine Alfredo</h1>
+        <h1 class="head">Fettuccine Alfredo</h1>
 
         <img src="../img/fettuccine.jpg" alt="A photograph of cooked fettuccine." height="778" width="518">
         
-        <h3>Ingredients</h5>
-        <ul>
+        <h3 class="sub">Ingredients</h5>
+        <ul class="list">
             <li>450 g fettuccine</li>
             <li>120 ml double cream</li>
             <li>10 g butter</li>
@@ -20,14 +21,14 @@
             <li>2 tbsp. chopped parsley</li>    
         </ul>
 
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="sub">Steps</h3>
+        <ol class="list">
             <li>In a large pot of boiling salted water, cook pasta according to package instructions. Reserve about 250ml of pasta water then drain.
             </li>
             <li>Meanwhile, in a large pan over medium heat, add cream and butter. Cook until the butter is melted and the cream is heated through. Whisk in Parmesan and season with salt and pepper.</li>
             <li>Add cooked pasta and toss until coated in sauce. If the sauce is too thick, add reserved pasta water, 1 tablespoon at a time. Garnish with parsley and serve immediately.</li>
         </ol>
 
-        <a href="../index.html">Home</a>
+        <a class="link" href="../index.html">Home</a>
     </body>
 </html>
