--- a/recipes/macaroni.html
+++ b/recipes/macaroni.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Macaroni</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Mac & Cheese</h1>
+        <h1 class="head">Mac & Cheese</h1>
 
         <img src="../img/mac.jpg" alt="A photograph of cooked macironi and cheese." height="753" width="602">
         
-        <h3>Ingredients</h5>
-        <ul>
+        <h3 class="sub">Ingredients</h5>
+        <ul class="list">
             <li>50g baguette, cut into small chunks</li>
             <li>2 tbsp butter, plus 1 tbsp melted</li>
             <li>350g spiral or other short pasta</li>
@@ -24,8 +25,8 @@
 
         </ul>
 
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="sub">Steps</h3>
+        <ol class="list">
             <li>Heat the oven to 200C/180C fan/gas 6. Spread the baguette chunks over a baking sheet, drizzle with the melted butter and season. Bake for 6 mins until crisp, then set aside.
             </li>
             <li>Boil the pasta for 2 mins less than stated on the pack, then drain. Meanwhile, melt the butter in a saucepan. Add the garlic and English mustard powder, cook for 1 min, then stir in the plain flour.
@@ -38,7 +39,7 @@
                 Scatter over the bread and the remaining parmesan, then bake for 20 mins until crisp and golden. Can be frozen before baking – defrost thoroughly before cooking.
             </li>
         </ol>
-        <a href="../index.html">Home</a>
+        <a class="link" href="../index.html">Home</a>
 
     </body>
 </html>
