--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>Pasta Recipes</title>
+        <link rel="stylesheet"  href="style.css">
     </head>
 
 <body> 
-    <h1>Pasta Recipes</h1>
+    <h1 class="head">Pasta Recipes</h1>
     <img src="./img/group.jpg" alt="A photograph of various types of uncooked pasta." height="784" width="523">
     <ul>
-        <li><a href="recipes/farfalle.html">Asparagus, Chilli & Feta Farfalle</a></li>
-        <li><a href="recipes/macaroni.html">Mac & Cheese</a></li>
-        <li><a href="recipes/fettuccine.html">Fettuccine Alfredo</a></li>
-        <li><a href="recipes/ravioli.html">Pesto Ravioli</a></li>
+        <li class="link"><a href="recipes/farfalle.html">Asparagus, Chilli & Feta Farfalle</a></li>
+        <li class="link"><a href="recipes/macaroni.html">Mac & Cheese</a></li>
+        <li class="link"><a href="recipes/fettuccine.html">Fettuccine Alfredo</a></li>
+        <li class="link"><a href="recipes/ravioli.html">Pesto Ravioli</a></li>
     </ul>
 </body>  
 
