--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Ravioli</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1>Pesto Ravioli</h1>
+        <h1 class="head">Pesto Ravioli</h1>
 
         <img src="../img/ravioli.jpg" alt="A photograph of cooked ravioli pasta." height="691" width="518">
         
-        <h3>Ingredients</h5>
-        <ul>
+        <h3 class="sub">Ingredients</h5>
+        <ul class="list">
             <li>2 8-ounce packages frozen or refrigerated cheese ravioli</li>
             <li>1 tablespoon olive oil</li>
             <li>1 pint grape tomatoes</li>
@@ -19,15 +20,15 @@
             <li>⅓ cup pesto</li>
         </ul>
 
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="sub">Steps</h3>
+        <ol class="list">
             <li>Bring a large pot of water to a boil. Cook ravioli according to package directions; drain and set aside.</li>
             <li>Heat oil in a large nonstick skillet over medium heat. Add tomatoes; sauté until they begin to burst, 3 to 4 minutes. Add spinach and continue to cook, stirring frequently, until it wilts, 1 to 2 minutes.
             </li>
             <li>Add the cooked ravioli and pesto; stir gently to combine.
             </li>
         </ol>
-        <a href="../index.html">Home</a>
+        <a class="link" href="../index.html">Home</a>
 
     </body>
 </html>
